--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,27 +33,14 @@
   text-decoration: none;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  margin-top: 2vh;
 }
 
 .title,
 .description {
   text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
 }
 
 .code {
@@ -65,7 +52,7 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
+.cardContainer {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -76,13 +63,13 @@
 .card {
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  width: 125px;
 }
 
 .card:hover,
