--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,19 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+:root {
+  --blue: #051252;
+  --yellow: #e9bc3c;
+  --orange: #d98e04;
+  --strong-orange: #d97904;
+  --sand: #bfa995;
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+@font-face {
+  font-family: baloo_2;
+  src: url("/assets/fonts/Baloo_2/Baloo2-VariableFont_wght.ttf")
+    format(truetype);
 }
